@@ -1,10 +1,10 @@
 {
-  "count": 90,
+  "count": 67,
   "uniques": 1,
   "views": [
     {
       "timestamp": "2022-05-12T00:00:00Z",
-      "count": 28,
+      "count": 5,
       "uniques": 1
     },
     {
