@@ -1,3 +1,10 @@
+2022-05-26T08:13:25Z:
+* notice: last 14d: unq all: 1 67
+* notice: prev accum: outdated-unq outdated-all / unq all: 12 287 / 20 377
+* notice: next accum: outdated-unq outdated-all / unq all: 12 287 / 20 354
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -23 / +0 +0 -0 -37 / 1 5
+* notice: changed dates: [2022-05-12]
+
 2022-05-26T00:50:47Z:
 * notice: last 14d: unq all: 1 90
 * notice: prev accum: outdated-unq outdated-all / unq all: 11 227 / 20 365
